--- a/src/main/webapp/Css/Connexion.css
+++ b/src/main/webapp/Css/Connexion.css
@@ -26,6 +26,9 @@
  	background:#fff;
  	color:#000;                                                          
  }
+ label{
+ margin-top: 3%;
+ }
 
 /*
 .m{
